[gd_scene load_steps=7 format=2]

[ext_resource path="res://slime_spriteframe.tres" type="SpriteFrames" id=1]
[ext_resource path="res://slime.gd" type="Script" id=2]
[ext_resource path="res://Assets/soundsandmusic/sounds/slimeDead.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.5, 8.5 )

[node name="slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "walk"
frame = 1
speed_scale = 0.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -0.5, 2.5 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="soundDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.9

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
